--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,7 @@ $first_font: 'Roboto', sans-serif;
 $secondary_font: 'Raleway', sans-serif;
 $fisrt_color: #212121;
 $second_color: #757575;
-$third_color: #AFB1B8;
+$third_color: #afb1b8;
 $forth_color: #f5f4fa;
 $fifth_color: #2f303a;
 $accent_color: #2196f3;
@@ -12,9 +12,4 @@ $white_color: #fff;
 $header_border_color: #ececec;
 $products_label_border_color: #eeeeee;
 $hero_bg_color: #c4c4c4;
-$body_width: 1600px;
-$container_width: 1200px;
-$container_padding: 0 15px;
-$section_padding: 94px 0;
-$grid_margin: 15px;
 $cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
