--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fff;
   color: #212121;
+  background-color: #fff;
 }
 
 h1,
 h2,
 h3,
 h4,
-h6,
+h5,
 h6 {
   display: block;
   margin: 0;
@@ -21,6 +21,19 @@ p {
   padding: 0;
 }
 
+a {
+  display: block;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  display: block;
+  cursor: pointer;
+  border: transparent;
+}
+
 ul,
 ol {
   list-style: none;
@@ -28,9 +41,10 @@ ol {
   padding: 0;
 }
 
-a {
+label,
+input,
+textarea {
   display: block;
-  text-decoration: none;
 }
 
 img,
@@ -38,15 +52,14 @@ svg {
   display: block;
 }
 
-button {
-  display: block;
-  cursor: pointer;
+.section {
+  margin: 0 auto;
+  padding: 94px 0;
 }
 
-label,
-input,
-textarea {
-  display: block;
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .visually-hidden {
@@ -58,738 +71,35 @@ textarea {
   clip: rect(0 0 0 0);
 }
 
-.section {
-  margin: 0;
-  padding: 94px 0;
-}
-
-.section__title {
-  margin: 0 0 50px 0;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
 .header {
-  margin: 0;
-  padding: 0;
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .header-container {
+    width: 480px;
+  }
 }
 
 .logo {
-  padding: 24px 0;
+  color: #000;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
-  color: #000;
+  margin: 0;
+  padding: 16px 0;
 }
 .logo--accented {
   color: #2196f3;
 }
 
 .navigation {
-  margin: 0 0 0 93px;
-}
-
-.navigation__list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.navigation__item {
-  position: relative;
-  margin: 0 50px 0 0;
-}
-.navigation__item:last-child {
-  margin: 0;
-}
-
-.navigation__link {
-  padding: 32px 0;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation__link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  height: 4px;
-  width: 100%;
-  background-color: #2196f3;
-  border: transparent;
-  border-radius: 2px;
-  opacity: 0;
-}
-.navigation__link:hover, .navigation__link:focus {
-  color: #2196f3;
-}
-.navigation__link--current, .navigation__link--current::after {
-  color: #2196f3;
-  opacity: 1;
+  display: none;
 }
 
 .header-contacts__list {
-  display: flex;
-  margin: 0 0 0 auto;
-}
-
-.header-contacts__item {
-  margin: 0 50px 0 0;
-}
-.header-contacts__item:last-child {
-  margin: 0;
-}
-
-.header-contacts__link {
-  display: flex;
-  align-items: center;
-  padding: 31px 0;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-  fill: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-contacts__link:hover, .header-contacts__link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.header-contacts__icon {
-  margin: 0 10px 0 0;
-}
-
-.section-hero {
-  padding: 200px 0;
-  max-width: 1600px;
-  margin: 0 auto;
-  background-color: #c4c4c4;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/index/bg-Img.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.section-hero__title {
-  margin: 0 auto 30px auto;
-  padding: 0 237px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.364;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.main-button {
-  margin: 0 auto;
-  padding: 10px 32px;
-  background: #2196f3;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #fff;
-  border: transparent;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.main-button:hover, .main-button:focus {
-  background-color: #188ce8;
-}
-
-.advantages {
-  padding: 94px 0 47px 0;
-}
-
-.advantages-set {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: -15px;
-}
-
-.advantages__item {
-  margin: 15px;
-  max-width: 270px;
-}
-
-.advantages__thumb {
-  height: 120px;
-  margin: 0 0 30px 0;
-  padding: 25px 0;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-}
-
-.advantages__icon {
-  margin: 0 auto;
-}
-
-.advantages__label {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin: 0 0 10px 0;
-}
-
-.advantages__text {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-  margin: 0;
-}
-
-.about-us {
-  padding: 47px 0 94px 0;
-}
-
-.about-us-set {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: -15px;
-}
-
-.about-us__item {
-  margin: 15px;
-  max-width: 370px;
-}
-
-.about-us__thumb {
-  position: relative;
-}
-
-.about-us__text {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  margin: 0;
-  padding: 27px 0;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #fff;
-  background: rgba(47, 48, 58, 0.8);
-}
-
-.our-team {
-  background: #f5f4fa;
-}
-
-.our-team-cards-set {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: -15px;
-}
-
-.our-team__card {
-  margin: 15px;
-  max-width: 270px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.our-team__label {
-  margin: 0;
-  padding: 30px 32px;
-}
-
-.our-team__name {
-  margin: 0 0 10px 0;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
-.our-team__job {
-  margin: 0 0 16px 0;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.socials {
-  display: flex;
-  margin: -5px;
-  align-items: center;
-  justify-content: center;
-}
-
-.socials__item {
-  margin: 5px;
-}
-
-.socials__link {
-  padding: 12px;
-  border-radius: 50%;
-  fill: #AFB1B8;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.socials__link:hover, .socials__link:focus {
-  background-color: #2196f3;
-  fill: #fff;
-}
-
-.clients-set {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: -15px;
-}
-
-.clients__item {
-  margin: 15px;
-  width: 170px;
-}
-
-.clients__link {
-  display: flex;
-  height: 90px;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  fill: #AFB1B8;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients__link:hover, .clients__link:focus {
-  fill: #2196f3;
-  border-color: #2196f3;
-}
-
-.filter-set {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 0 50px 0;
-}
-
-.filter-set__item {
-  margin: 0 9px 0 0;
-}
-.filter-set__item:last-child {
-  margin: 0;
-}
-
-.filter-button {
-  padding: 6px 22px;
-  background: #f5f4fa;
-  color: #212121;
-  border: transparent;
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filter-button:hover, .filter-button:focus {
-  background: #2196f3;
-  color: #fff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.products-set {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin: -15px;
-}
-
-.products__card {
-  margin: 15px;
-  max-width: 370px;
-}
-
-.products__link {
-  color: #212121;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.products__link:hover, .products__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.products__thumb {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-.products__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  padding: 63px 24px;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: #fff;
-  background: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.products__link:hover .products__overlay, .products__link:focus .products__overlay {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.products__label {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-  border-top: none;
-}
-
-.products__title {
-  margin: 0 0 4px 0;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.products__text {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.footer {
-  background-color: #2f303a;
-  margin: 0;
-  padding: 60px 0;
-}
-
-.footer-container {
-  display: flex;
-  align-items: center;
-}
-
-.container__title {
-  display: block;
-  margin: 0 0 20px 0;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.footer-logo {
-  margin: 0 0 20px 0;
-  padding: 0;
-  color: #fff;
-}
-
-.address__item {
-  color: #fff;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-}
-
-.address__item {
-  margin: 0 0 9px 0;
-}
-.address__item:last-child {
-  margin: 0;
-}
-
-.address__link {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-socials-container {
-  margin: 0 0 0 70px;
-  align-items: center;
-}
-
-.footer-socials__link {
-  background: rgba(255, 255, 255, 0.1);
-  fill: #fff;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-socials__link:hover, .footer-socials__link:focus {
-  background-color: #2196f3;
-}
-
-.footer-form-container {
-  width: 570px;
-  margin: 0 0 0 auto;
-}
-
-.footer-form {
-  display: flex;
-  align-items: center;
-}
-
-.footer-form__input {
-  padding: 15px 16px;
-  width: 100%;
-  margin: 0 12px 0 0;
-  color: #fff;
-  background-color: #2f303a;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-.footer-form__input::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-.footer-form__input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-.footer-form__input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-submit-button {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 0;
-  padding: 10px 28px;
-  letter-spacing: 0.06em;
-  color: #fff;
-  fill: #fff;
-}
-
-.footer-submit-button__icon {
-  margin: 0 0 0 10px;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  height: 581px;
-  width: 528px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.8);
-}
-
-.modal-form {
-  margin: 0;
-  padding: 40px;
-}
-
-.modal-form__title {
-  display: block;
-  margin: 0 0 12px 0;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
-.modal-form__field {
-  position: relative;
-  display: flex;
-  margin: 0 0 10px 0;
-  flex-direction: column;
-}
-
-.modal-form__label {
-  margin: 0 0 4px 0;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: #757575;
-}
-
-.modal-form__input {
-  height: 40px;
-  padding: 0 0 0 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__field:hover .modal-form__input {
-  border: 1px solid #2196f3;
-}
-.modal-form__input:focus {
-  border: 1px solid #2196f3;
-  outline: transparent;
-}
-
-.modal-form__icon {
-  position: absolute;
-  display: block;
-  top: 29px;
-  left: 12px;
-  fill: #212121;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__field:hover .modal-form__icon {
-  fill: #2196f3;
-}
-.modal-form__input:focus ~ .modal-form__icon {
-  fill: #2196f3;
-}
-
-.modal-form__comment {
-  margin: 0 0 20px 0;
-}
-
-.modal-form__text-area {
-  display: block;
-  resize: none;
-  height: 120px;
-  padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__text-area::-moz-placeholder {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-.modal-form__text-area:-ms-input-placeholder {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-.modal-form__text-area::placeholder {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.agreement {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0px 0 30px 0;
-  padding: 0 12px;
-}
-
-.agreement__icon {
-  display: block;
-  margin: 0 7px 0 0;
-  padding: 0;
-  background-color: transparent;
-  fill: transparent;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), backgroung-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.agreement__checkbox:checked + .agreement__icon {
-  background-color: #2196f3;
-  fill: #fff;
-  border: transparent;
-}
-
-.agreement__label {
-  display: block;
-  margin: 0;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.agreement__link {
-  display: inline;
-  color: #2196f3;
-  text-decoration: underline;
-}
-
-.modal-submit-button {
-  padding: 10px 55px;
-}
-
-.close-button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  padding: 5px;
-  cursor: pointer;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-button:hover, .close-button:focus {
-  fill: #2196f3;
+  display: none;
 }/*# sourceMappingURL=main.css.map */
