added index.html mobilefirst css

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,9 @@
 @import './components/logo';
 @import './components/navigation';
 @import './components/page-index/hero-section';
+@import './components/page-index/advantages-section';
+@import './components/page-index/about-us-section';
+@import './components/page-index/our-team-section';
+@import './components/socials';
+@import './components/page-index/clients-section';
+@import './components/footer';
