--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,9 +46,16 @@ svg {
 }
 .section {
   margin: 0 auto;
-  padding: 94px 0;
+  padding: 60px 0;
 }
 .container {
   margin: 0 auto;
   padding: 0 15px;
+}
+.section__title {
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.18;
+  text-align: center;
 }
