--- a/sass/components/page-index/_hero-section.scss
+++ b/sass/components/page-index/_hero-section.scss
@@ -1,1 +1,38 @@
-
+.section-hero {
+  padding: 118px 0;
+  background-image: linear-gradient(
+    to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
+}
+.hero-container {
+  padding: 0 15px;
+}
+.section-hero__title {
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
+  color: $white_color;
+}
+.main-button {
+  margin: 0 auto;
+  padding: 10px 32px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: $white_color;
+  border: transparent;
+  background-color: $accent_color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  &:hover,
+  &:focus {
+    background-color: $accent_color-hover;
+  }
+}
