--- a/sass/components/page-index/_clients-section.scss
+++ b/sass/components/page-index/_clients-section.scss
@@ -19,6 +19,9 @@
     border-color: $accent_color;
     fill: $accent_color;
   }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: calc((480px - 4 * 15px) / 2);
+  }
 }
 .clients__logo {
   margin: 0 auto;
