--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,21 @@
+// Common styles
 @import './utils/variables';
 @import './base';
 @import './utils/visually-hidden';
 @import './components/page-header';
 @import './components/logo';
 @import './components/navigation';
+@import './components/mobile-menu';
+@import './components/socials';
+@import './components/footer';
+// page index.html
 @import './components/page-index/hero-section';
 @import './components/page-index/advantages-section';
 @import './components/page-index/about-us-section';
 @import './components/page-index/our-team-section';
-@import './components/socials';
 @import './components/page-index/clients-section';
-@import './components/footer';
+@import './components/page-index/backdrop';
+@import './components/page-index/modal-window';
+// page portfolio.html
+@import './components/page-portfolio/filters';
+@import './components/page-portfolio/products';
