--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $first_font: 'Roboto', sans-serif;
 $secondary_font: 'Raleway', sans-serif;
-$fisrt_color: #212121;
+$first_color: #212121;
 $second_color: #757575;
 $third_color: #afb1b8;
 $forth_color: #f5f4fa;
