--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,15 @@
 body {
   font-family: $first_font;
-  color: $fisrt_color;
+  color: $first_color;
   background-color: $white_color;
+  &.modal-window--open {
+    overflow: hidden;
+  }
+  @media screen and (max-width: 767px) {
+    &.mobile-menu--open {
+      overflow: hidden;
+    }
+  }
 }
 h1,
 h2,
@@ -51,6 +59,9 @@ svg {
 .container {
   margin: 0 auto;
   padding: 0 15px;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: 480px;
+  }
 }
 .section__title {
   margin-bottom: 30px;
