--- a/sass/components/page-index/_about-us-section.scss
+++ b/sass/components/page-index/_about-us-section.scss
@@ -1,3 +1,7 @@
 .about-us {
-  display: none;
+  padding-top: 47px;
+  padding-bottom: 94px;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
