--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,6 +62,12 @@ svg {
   @media screen and (min-width: 480px) and (max-width: 767px) {
     width: 480px;
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 .section__title {
   margin-bottom: 30px;
