--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,11 +2,22 @@
   padding: 60px 0;
   background-color: $fifth_color;
 }
+.footer-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .footer-address-container {
   margin-bottom: 60px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  }
 }
 .footer-logo {
   margin-bottom: 20px;
+  padding: 0;
   text-align: center;
   color: $white_color;
 }
@@ -30,6 +41,9 @@
 .footer-socials-container {
   margin-bottom: 60px;
   text-align: center;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: 165px;
+  }
 }
 .container__title {
   display: block;
@@ -47,6 +61,9 @@
 }
 .footer-form-container {
   text-align: center;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 450px;
+  }
 }
 .footer-form {
 }
