--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,6 +1,74 @@
 .navigation {
   display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 88px;
+  }
+}
+.navigation__list {
+  display: flex;
+  align-items: center;
+}
+.navigation__item {
+  &:not(&:last-child) {
+    margin-right: 50px;
+  }
+}
+.navigation__link {
+  position: relative;
+  padding: 32px 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: $first_color;
+  &:hover,
+  &:focus {
+    color: $accent_color;
+  }
+  &--current {
+    color: $accent_color;
+    &::after {
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      content: '';
+      display: block;
+      height: 4px;
+      width: 100%;
+      background-color: $accent_color;
+      border-radius: 2px;
+    }
+  }
 }
 .header-contacts__list {
   display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+  }
+}
+.header-contacts__item {
+  &:first-child {
+    margin-bottom: 10px;
+  }
+}
+.header-contacts__link {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: $second_color;
+  fill: $second_color;
+  transition: color $cubic, fill $cubic;
+  &:hover,
+  &:focus {
+    color: $accent_color;
+    fill: $accent_color;
+  }
+}
+.header-contacts__icon {
+  margin-right: 8px;
 }
