--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -6,6 +6,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+  }
 }
 .mobile-menu-open-button {
   margin: 0;
