--- a/sass/components/page-index/_backdrop.scss
+++ b/sass/components/page-index/_backdrop.scss
@@ -10,6 +10,9 @@
   padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity $cubic;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding: 208px 0;
+  }
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
