--- a/sass/components/page-index/_modal-window.scss
+++ b/sass/components/page-index/_modal-window.scss
@@ -7,6 +7,10 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: opacity $cubic;
+  @media screen and (min-width: 480px) {
+    margin: 0 auto;
+    width: 450px;
+  }
 }
 .modal-form__title {
   display: block;
@@ -56,6 +60,7 @@
 }
 .modal-form__textarea {
   resize: none;
+  margin-bottom: 20px;
   padding: 12px 16px;
   height: 120px;
   &::placeholder {
@@ -70,6 +75,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
 }
 .agreement__icon {
   border: 2px solid $first_color;
