--- a/sass/components/page-index/_our-team-section.scss
+++ b/sass/components/page-index/_our-team-section.scss
@@ -2,19 +2,34 @@
   background-color: $forth_color;
 }
 .our-team-cards-set {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: -15px;
+  }
 }
 .our-team__card {
-  &:not(&:last-child) {
-    margin-bottom: 30px;
-  }
   background-color: $white_color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  @media screen and (max-width: 767px) {
+    &:not(&:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    width: calc((768px - 4 * 15px) / 2);
+  }
 }
 .our-team__image {
   width: 100%;
   height: 100%;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    height: 374px;
+  }
 }
 .our-team__label {
   padding: 30px 0 24px 0;
