--- a/sass/components/page-portfolio/_filters.scss
+++ b/sass/components/page-portfolio/_filters.scss
@@ -2,9 +2,21 @@
   display: flex;
   flex-wrap: wrap;
   margin: -8px;
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    margin: 0 0 30px 0;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .filter-set__item {
   margin: 8px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    &:not(&:first-child) {
+      margin: 0 0 0 8px;
+    }
+  }
 }
 .filter-button {
   margin: 0;
