--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -3,6 +3,9 @@
   @media screen and (min-width: 768px) {
     display: block;
     margin-left: 88px;
+    @media screen and (min-width: 1200px) {
+      margin-left: 93px;
+    }
   }
 }
 .navigation__list {
@@ -47,10 +50,19 @@
     display: block;
     margin-left: auto;
   }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 .header-contacts__item {
   &:first-child {
     margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    &:first-child {
+      margin: 0 30px 0 0;
+    }
   }
 }
 .header-contacts__link {
@@ -67,6 +79,9 @@
   &:focus {
     color: $accent_color;
     fill: $accent_color;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 31px 0;
   }
 }
 .header-contacts__icon {
