--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,10 +7,15 @@
   letter-spacing: 0.03em;
   margin: 0;
   padding: 16px 0;
-  &--accented {
-    color: $accent_color;
-  }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding: 26px 0;
   }
+  @media screen and (min-width: 1200px) {
+    padding: 24px 0;
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+.logo--accented {
+  color: $accent_color;
 }
