--- a/sass/components/page-index/_about-us-section.scss
+++ b/sass/components/page-index/_about-us-section.scss
@@ -5,3 +5,31 @@
     display: none;
   }
 }
+.about-us-set {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: -15px;
+}
+.about-us__item {
+  margin: 15px;
+  width: calc((1200px - 6 * 15px) / 3);
+}
+.about-us__thumb {
+  position: relative;
+}
+.about-us__text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 27px 0;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.42;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $white_color;
+  background-color: rgba(47, 48, 58, 0.8);
+}
