--- a/sass/components/page-index/_backdrop.scss
+++ b/sass/components/page-index/_backdrop.scss
@@ -13,6 +13,10 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding: 208px 0;
   }
+  @media screen and (min-width: 1200px) {
+    padding: 221px 0;
+  }
+
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
