--- a/sass/components/page-index/_clients-section.scss
+++ b/sass/components/page-index/_clients-section.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   margin: -15px;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .clients__item {
   margin: 15px;
@@ -24,6 +29,9 @@
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((768px - 6 * 15px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((1200px - 12 * 30px) / 6);
   }
 }
 .clients__logo {
