--- a/sass/components/page-index/_hero-section.scss
+++ b/sass/components/page-index/_hero-section.scss
@@ -56,6 +56,35 @@
         url(../images/index/tablet-bg-img-2304.jpg);
     }
   }
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/index/bg-img-1600.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/index/bg-img-3200.jpg);
+    }
+    @media (min-device-pixel-ratio: 3),
+      (min-resolution: 288dpi),
+      (min-resolution: 3dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/index/bg-img-4800.jpg);
+    }
+  }
 }
 .hero-container {
   @media screen and (min-width: 452px) and (max-width: 479px) {
@@ -67,6 +96,9 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding: 0 204px;
   }
+  @media screen and (min-width: 1200px) {
+    padding: 0 252px;
+  }
 }
 .section-hero__title {
   margin-bottom: 30px;
@@ -77,6 +109,10 @@
   text-transform: uppercase;
   text-align: center;
   color: $white_color;
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 .main-button {
   margin: 0 auto;
@@ -86,7 +122,7 @@
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: $white_color;
-  border: transparent;
+  border: 1px solid transparent;
   background-color: $accent_color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
