--- a/sass/components/page-index/_modal-window.scss
+++ b/sass/components/page-index/_modal-window.scss
@@ -11,6 +11,12 @@
     margin: 0 auto;
     width: 450px;
   }
+  @media screen and (min-width: 1200px) {
+    margin: 0 auto;
+    padding: 40px;
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal-form__title {
   display: block;
@@ -20,6 +26,9 @@
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 768px) {
+    line-height: 1.15;
+  }
 }
 .modal-form__field {
   position: relative;
@@ -69,6 +78,10 @@
     line-height: 1.14;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
+    @media screen and (min-width: 1200px) {
+      font-size: 12px;
+      line-height: 1.17;
+    }
   }
 }
 .agreement {
@@ -95,6 +108,10 @@
   margin: 0 0 0 8px;
   padding: 0;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .agreement__link {
   display: inline;
