--- a/sass/components/page-index/_our-team-section.scss
+++ b/sass/components/page-index/_our-team-section.scss
@@ -23,6 +23,9 @@
     margin: 15px;
     width: calc((768px - 4 * 15px) / 2);
   }
+  @media screen and (min-width: 1200px) {
+    width: calc((1200px - 8 * 15px) / 4);
+  }
 }
 .our-team__image {
   width: 100%;
@@ -30,9 +33,17 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     height: 374px;
   }
+  @media screen and (min-width: 1200px) {
+    height: 260px;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 .our-team__label {
   padding: 30px 0 24px 0;
+  @media screen and (min-width: 1200px) {
+    padding: 30px 0;
+  }
 }
 .our-team__name {
   margin-bottom: 10px;
