--- a/sass/components/page-portfolio/_filters.scss
+++ b/sass/components/page-portfolio/_filters.scss
@@ -8,6 +8,9 @@
     align-items: center;
     justify-content: center;
   }
+  @media screen and (min-width: 1200px) {
+    margin: 0 0 50px 0;
+  }
 }
 .filter-set__item {
   margin: 8px;
@@ -20,7 +23,7 @@
 }
 .filter-button {
   margin: 0;
-  padding: 0 22px;
+  padding: 5px 22px;
   border: transparent;
   font-weight: 500;
   font-size: 16px;
