--- a/sass/components/page-portfolio/_products.scss
+++ b/sass/components/page-portfolio/_products.scss
@@ -5,6 +5,9 @@
     display: flex;
     flex-wrap: wrap;
   }
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
 }
 .products__card {
   &:not(&:last-child) {
@@ -13,6 +16,9 @@
   @media screen and (min-width: 768px) {
     margin: 15px;
     width: calc((768px - 4 * 15px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((1200px - 6 * 15px) / 3);
   }
 }
 .products__link {
@@ -35,7 +41,7 @@
 .products__image {
   height: 100%;
   width: 100%;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     height: 294px;
     object-fit: cover;
   }
@@ -48,10 +54,10 @@
   transform: translateY(100%);
   height: 100%;
   width: 100%;
-  padding: 5px;
+  padding: 4px;
   font-weight: normal;
   font-size: 18px;
-  line-height: 1.55;
+  line-height: 1.56;
   letter-spacing: 0.03em;
   color: $white_color;
   background-color: rgba(33, 150, 243, 0.9);
@@ -59,8 +65,11 @@
   @media screen and (min-width: 480px) and (max-width: 767px) {
     padding: 77px 24px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding: 49px 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
   }
 }
 .products__label {
