--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -25,6 +25,7 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $first_color;
+  transition: color $cubic;
   &:hover,
   &:focus {
     color: $accent_color;
