--- a/sass/components/page-index/_clients-section.scss
+++ b/sass/components/page-index/_clients-section.scss
@@ -19,6 +19,7 @@
   border: 1px solid $third_color;
   border-radius: 4px;
   fill: $third_color;
+  transition: border-color $cubic, fill $cubic;
   &:hover,
   &:focus {
     border-color: $accent_color;
