--- a/sass/components/page-index/_hero-section.scss
+++ b/sass/components/page-index/_hero-section.scss
@@ -126,6 +126,7 @@
   background-color: $accent_color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  transition: background-color $cubic;
   &:hover,
   &:focus {
     background-color: $accent_color-hover;
