--- a/sass/components/page-index/_hero-section.scss
+++ b/sass/components/page-index/_hero-section.scss
@@ -29,6 +29,7 @@
       url(../images/index/mobile-bg-img-1440.jpg);
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 768px;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -58,6 +59,8 @@
   }
   @media screen and (min-width: 1200px) {
     padding: 200px 0;
+    max-width: 1600px;
+    background-color: $hero_bg_color;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
