--- a/sass/components/page-index/_modal-window.scss
+++ b/sass/components/page-index/_modal-window.scss
@@ -92,6 +92,7 @@
 }
 .agreement__icon {
   border: 2px solid $first_color;
+  border-radius: 2px;
   background-color: $white_color;
   fill: transparent;
   transform: border-color $cubic, fill $cubic, background-color $cubic;
